Specify endpoint to kick of training
